--- a/patternlab/public/css/overrides/admin_menu_toolbar.css
+++ b/patternlab/public/css/overrides/admin_menu_toolbar.css
@@ -1,16 +1,20 @@
 /* line 7, ../../sass/overrides/admin_menu_toolbar.scss */
+#admin-menu a {
+  font-weight: normal;
+}
+/* line 11, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .admin-menu-icon {
   height: 26px;
   margin: 0;
   padding: 0;
 }
-/* line 12, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 16, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .admin-menu-icon > a {
   display: block;
   margin: 0;
   padding: 0 0.25em;
 }
-/* line 17, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 21, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .admin-menu-icon > a > span {
   height: 20px;
   overflow: hidden;
@@ -30,11 +34,11 @@
   height: 150%;
   width: 0;
 }
-/* line 26, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 30, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .admin-menu-icon > .dropdown {
   margin-top: 7px;
 }
-/* line 31, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 35, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toggle {
   height: 27px;
   overflow: hidden;
@@ -68,7 +72,7 @@
   height: 150%;
   width: 0;
 }
-/* line 46, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 50, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toggle:before {
   border: 1em solid transparent;
   border-top-color: #fff;
@@ -82,13 +86,13 @@
   position: absolute;
   width: 0;
 }
-/* line 60, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 64, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toggle.is-active:before {
   border-bottom-color: #fff;
   border-top-color: transparent;
   bottom: 2.25em;
 }
-/* line 67, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 71, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toolbar {
   *zoom: 1;
   background-color: #555;
@@ -109,15 +113,15 @@
 #admin-menu .shortcut-toolbar:after {
   clear: both;
 }
-/* line 78, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 82, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toolbar.is-active {
   display: block;
 }
-/* line 82, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 86, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toolbar #edit-shortcuts {
   float: right;
 }
-/* line 86, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 90, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toolbar a {
   -webkit-border-radius: 1em;
   -moz-border-radius: 1em;
@@ -132,22 +136,22 @@
   padding: 0 0.75em;
   text-decoration: none;
 }
-/* line 97, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 101, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toolbar a:hover, #admin-menu .shortcut-toolbar a.is-active {
   background-color: #000;
 }
-/* line 101, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 105, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .shortcut-toolbar a:focus {
   background-color: #000;
   border-color: #ccc;
 }
-/* line 109, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 113, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .toolbar-shortcuts ul {
   float: left;
   margin: 0;
   padding: 0;
 }
-/* line 114, ../../sass/overrides/admin_menu_toolbar.scss */
+/* line 118, ../../sass/overrides/admin_menu_toolbar.scss */
 #admin-menu .toolbar-shortcuts ul li {
   float: left;
   list-style-image: none;
