--- a/patternlab/source/css/overrides/admin_menu.css
+++ b/patternlab/source/css/overrides/admin_menu.css
@@ -16,8 +16,12 @@
 [dir="rtl"] #admin-menu {
   text-align: right;
 }
+/* line 23, ../../sass/overrides/admin_menu.scss */
+#admin-menu a {
+  font-weight: normal;
+}
 
-/* line 28, ../../sass/overrides/admin_menu.scss */
+/* line 32, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon,
 #admin-menu-menu,
 #admin-menu-account,
@@ -27,7 +31,7 @@
   margin: 0;
   padding: 0;
 }
-/* line 33, ../../sass/overrides/admin_menu.scss */
+/* line 37, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon > li,
 #admin-menu-menu > li,
 #admin-menu-account > li,
@@ -36,7 +40,7 @@
   float: left;
   margin: 0;
 }
-/* line 37, ../../sass/overrides/admin_menu.scss */
+/* line 41, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-icon > li, [dir="rtl"]
 #admin-menu-menu > li, [dir="rtl"]
 #admin-menu-account > li, [dir="rtl"]
@@ -44,7 +48,7 @@
 #admin-menu-search > li {
   float: right;
 }
-/* line 41, ../../sass/overrides/admin_menu.scss */
+/* line 45, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon > li > a,
 #admin-menu-menu > li > a,
 #admin-menu-account > li > a,
@@ -63,7 +67,7 @@
   padding: 0 0.75em;
   text-decoration: none;
 }
-/* line 52, ../../sass/overrides/admin_menu.scss */
+/* line 56, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon > li > a:hover, #admin-menu-icon > li > a.is-active,
 #admin-menu-menu > li > a:hover,
 #admin-menu-menu > li > a.is-active,
@@ -75,7 +79,7 @@
 #admin-menu-search > li > a.is-active {
   background-color: #555;
 }
-/* line 56, ../../sass/overrides/admin_menu.scss */
+/* line 60, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon > li > a:focus,
 #admin-menu-menu > li > a:focus,
 #admin-menu-account > li > a:focus,
@@ -84,7 +88,7 @@
   background-color: #555;
   border-color: #ccc;
 }
-/* line 63, ../../sass/overrides/admin_menu.scss */
+/* line 67, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown,
 #admin-menu-menu .dropdown,
 #admin-menu-account .dropdown,
@@ -99,7 +103,7 @@
   width: 14em;
   z-index: 2;
 }
-/* line 73, ../../sass/overrides/admin_menu.scss */
+/* line 77, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown li + li,
 #admin-menu-menu .dropdown li + li,
 #admin-menu-account .dropdown li + li,
@@ -107,7 +111,7 @@
 #admin-menu-search .dropdown li + li {
   border-top: 1px solid #555;
 }
-/* line 78, ../../sass/overrides/admin_menu.scss */
+/* line 82, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown a,
 #admin-menu-icon .dropdown span,
 #admin-menu-menu .dropdown a,
@@ -124,7 +128,7 @@
   padding: 0 0.5em;
   text-decoration: none;
 }
-/* line 86, ../../sass/overrides/admin_menu.scss */
+/* line 90, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown a:hover, #admin-menu-icon .dropdown a:focus,
 #admin-menu-icon .dropdown span:hover,
 #admin-menu-icon .dropdown span:focus,
@@ -146,7 +150,7 @@
 #admin-menu-search .dropdown span:focus {
   background-color: #555;
 }
-/* line 91, ../../sass/overrides/admin_menu.scss */
+/* line 95, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown .dropdown,
 #admin-menu-menu .dropdown .dropdown,
 #admin-menu-account .dropdown .dropdown,
@@ -155,7 +159,7 @@
   margin: -1.75em 0 0 14em;
   position: absolute;
 }
-/* line 95, ../../sass/overrides/admin_menu.scss */
+/* line 99, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-icon .dropdown .dropdown, [dir="rtl"]
 #admin-menu-menu .dropdown .dropdown, [dir="rtl"]
 #admin-menu-account .dropdown .dropdown, [dir="rtl"]
@@ -163,7 +167,7 @@
 #admin-menu-search .dropdown .dropdown {
   margin: -1.75em 14em 0 0;
 }
-/* line 101, ../../sass/overrides/admin_menu.scss */
+/* line 105, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown .expandable > a,
 #admin-menu-icon .dropdown .expandable > span,
 #admin-menu-menu .dropdown .expandable > a,
@@ -176,7 +180,7 @@
 #admin-menu-search .dropdown .expandable > span {
   position: relative;
 }
-/* line 104, ../../sass/overrides/admin_menu.scss */
+/* line 108, ../../sass/overrides/admin_menu.scss */
 #admin-menu-icon .dropdown .expandable > a:after,
 #admin-menu-icon .dropdown .expandable > span:after,
 #admin-menu-menu .dropdown .expandable > a:after,
@@ -192,7 +196,7 @@
   right: 0.5em;
   top: 0;
 }
-/* line 110, ../../sass/overrides/admin_menu.scss */
+/* line 114, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-icon .dropdown .expandable > a:after, [dir="rtl"]
 #admin-menu-icon .dropdown .expandable > span:after, [dir="rtl"]
 #admin-menu-menu .dropdown .expandable > a:after, [dir="rtl"]
@@ -207,42 +211,42 @@
   right: auto;
 }
 
-/* line 119, ../../sass/overrides/admin_menu.scss */
+/* line 123, ../../sass/overrides/admin_menu.scss */
 #admin-menu-account {
   float: right;
 }
-/* line 122, ../../sass/overrides/admin_menu.scss */
+/* line 126, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-account {
   float: left;
 }
 
-/* line 127, ../../sass/overrides/admin_menu.scss */
+/* line 131, ../../sass/overrides/admin_menu.scss */
 #admin-menu-search {
   float: right;
 }
-/* line 130, ../../sass/overrides/admin_menu.scss */
+/* line 134, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-search {
   float: left;
 }
-/* line 134, ../../sass/overrides/admin_menu.scss */
+/* line 138, ../../sass/overrides/admin_menu.scss */
 #admin-menu-search .form-item {
   margin: 0.16667em 1em 0 0;
 }
-/* line 137, ../../sass/overrides/admin_menu.scss */
+/* line 141, ../../sass/overrides/admin_menu.scss */
 [dir="rtl"] #admin-menu-search .form-item {
   margin: 0.16667em 0 0 1em;
 }
-/* line 141, ../../sass/overrides/admin_menu.scss */
+/* line 145, ../../sass/overrides/admin_menu.scss */
 #admin-menu-search .form-item input {
   max-width: 20em;
 }
 
-/* line 147, ../../sass/overrides/admin_menu.scss */
+/* line 151, ../../sass/overrides/admin_menu.scss */
 img.admin-menu-icon {
   vertical-align: middle;
 }
 
-/* line 151, ../../sass/overrides/admin_menu.scss */
+/* line 155, ../../sass/overrides/admin_menu.scss */
 body.admin-menu {
   margin-top: 0.25em;
   padding-top: 2.0625em;
