--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--landing-intro.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--landing-intro.scss
@@ -1,5 +1,6 @@
 .pane--landing-intro {
   @extend %clearfix;
+  @include hyphens(none);
   background: url(../images/background--path.png) no-repeat 100% 0;
   margin: 0;
   min-height: 300px;
@@ -87,7 +88,7 @@
     }
   }
   &.pane--sectors-introduction h1:before {
-    //@include svg-background(icon-sectors-46-46-white);
+    @include svg-background(icon-sectors-46-46-white);
   }
   &.pane--topics-introduction h1:before {
     @include svg-background(icon-topics-53-46-white);
