--- a/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
@@ -2,12 +2,44 @@
 // Styles for form items.
 
 .form-item {
-  margin: rhythm(1) 0;
+  margin: 1em 0;
+  
+  label {
+    display: block;
+    font-weight: bold;
+  }
+
+  legend,
+  .form-item__legend {
+    font-weight: bold;
+  }
+
+  .description,
+  .form-item__description {
+    @include adjust-font-size-to($font-size-md);
+    @include hyphens(none);
+    color: $secondary-text-color;
+    font-size: em($font-size-md);
+    font-style: italic;
+    line-height: 1.4;
+    padding-bottom: 0.5em;
+  }
 }
 
 .form-item__label {
   display: block;
   font-weight: bold;
+}
+
+.form-type-checkbox,
+.form-item--checkbox,
+.form-type-radio,
+.form-item--radio {
+  label,
+  .form-item__label {
+    display: inline;
+    font-weight: normal;
+  }
 }
 
 .form-item__fieldset {
@@ -16,25 +48,9 @@
   padding: 0;
 }
 
-.form-item__legend {
-  font-weight: bold;
-}
-
-.form-item__description {
-  @include adjust-font-size-to($font-size-md);
-  color: $secondary-text-color;
-}
-
 .form-item__required-marker:before {
+  color: $error-color;
   content: "*";
-}
-
-.form-item--checkbox,
-.form-item--radio {
-  .form-item__label {
-    display: inline;
-    font-weight: normal;
-  }
 }
 
 .form-item--checkboxes .form-item--checkbox,
@@ -62,7 +78,7 @@
 .form-textarea {
   border: 1px solid $form-border-color;
   font-size: em($form-text-size);
-  padding: em(5px, $form-text-size) em(10px, $form-text-size);
+  padding: em(8px, $form-text-size) em(12px, $form-text-size);
 
   &:focus {
     border-color: darken($form-border-color, 50%);
