--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
@@ -4,6 +4,7 @@ div[class*="pane--facetapi-"] {
   border-top: 0;
   margin: 0;
   &:last-child {
+    @include box-shadow(0px 4px 2px -2px rgba(0,0,0,0.2));
     margin-bottom: 2em;
   }
   .pane__title {
@@ -14,6 +15,9 @@ div[class*="pane--facetapi-"] {
     font-weight: normal;
     margin: 0;
     padding: 1em 0.75em;
+  }
+  &.is-closed {
+    border-bottom: 1px solid #fff;
   }
   &.is-open .pane__title,
   &.is-closed .pane__title {
