--- a/public/sites/all/themes/gesso/sass/partials/components/_mobile-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_mobile-menu.scss
@@ -14,7 +14,7 @@
   border-bottom: 1px solid $mobile-menu-border-color;
   @include box-shadow(0 0px 2px 1px rgba(0,0,0,0.4));
   color: $mobile-menu-text-color;
-  height: em(60px);
+  height: em(55px);
   text-align: center;
 }
 
@@ -28,8 +28,8 @@
   font-family: $mobile-menu-font-family;
   font-size: $font-size-normal;
   font-weight: bold;
-  height: em(60px);
-  line-height: em(60px);
+  height: em(55px);
+  line-height: em(55px);
   margin: 0;
   padding: 0 1em;
   text-decoration: none;
@@ -57,21 +57,21 @@
 
 
 .mobile-menu__icon {
-  @include image-replace(24px, 24px);
+  @include image-replace(22px, 22px);
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-size: 24px 24px;
+  background-size: 22px 22px;
   display: inline-block;
   margin-top: 1em;
 }
 
 .mobile-menu__icon--menu {
   @include svg-background(hamburger);
-  background-size: 32px 24px;
-  width: 32px;
+  background-size: 33px 22px;
+  width: 33px;
   .is-active & {
     @include svg-background(close);
-    background-size: 24px 24px;
+    background-size: 22px 22px;
   }
 }
 
@@ -79,6 +79,7 @@
   @include svg-background(mobile-logo);
   background-size: 149px 30px;
   height: 30px;
+  margin-top: em(15px);
   width: 149px;
 }
 
