--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -2,7 +2,7 @@
 // Styles for the mobile menu.
 
 .nav--mobile-menu {
-  margin: 0;
+  margin: 0.75em 0 0 0;
 
   .nav__item {
     margin: 0;
@@ -12,23 +12,29 @@
   .nav__item--parent,
   .nav__item--lvl2parent {
     position: relative;
+    &.is-open {
+      background: $mobile-submenu-fallback-bg-color;
+      background: $mobile-submenu-bg-color;
+    }
   }
 
   .nav__link {
     background-color: transparent;
     border: 0;
     color: $mobile-menu-text-color;
-    display: block;
+    display: inline-block;
     font-family: $mobile-menu-font-family;
     font-size: $font-size-lg;
     font-weight: bold;
     line-height: 1.25;
     margin: 0;
-    padding: 0.75em 1em;
+    padding: 0.75em 1.25em;
+    position: relative;
     text-align: left;
     text-decoration: none;
     white-space: normal;
-    width: 100%;
+    width: auto;
+    z-index: 3;
 
     &:focus,
     &:hover,
@@ -40,14 +46,14 @@
 
   .nav__link--parent,
   .nav__header {
-    padding: 0.75em 44px 0.75em 1em;
-    [dir="rtl"] & {
-      padding: 0.75em 1em 0.75em 44px;
-    }
-    &.is-open {
-      background: $mobile-submenu-fallback-bg-color;
-      background: $mobile-submenu-bg-color;
-    }
+    //padding: 0.75em 44px 0.75em 1em;
+    //[dir="rtl"] & {
+    //  padding: 0.75em 1em 0.75em 44px;
+    //}
+    //&.is-open {
+    //  background: $mobile-submenu-fallback-bg-color;
+    //  background: $mobile-submenu-bg-color;
+    //}
   }
 
   .nav__header {
@@ -60,7 +66,7 @@
     font-weight: bold;
     line-height: 1.25;
     margin: 0;
-    padding: 0.75em 1em 0.75em 1.5em;
+    padding: 0.75em 1.25em 0.75em 2em;
     text-align: left;
     text-decoration: none;
     white-space: normal;
@@ -70,9 +76,9 @@
   .nav__subnav-arrow,
   .nav__lvl2subnav-arrow {
     background: none;
-    @include image-replace(44px,44px);
+    @include image-replace(100%,44px);
     @include svg-background(arrow-down);  
-    background-position: 50% 50%;
+    background-position: 95% 50%;
     background-repeat: no-repeat;
     background-size: 19px 12px;
     border: 0;
@@ -103,17 +109,17 @@
   .nav--subnav,
   .nav--lvl2subnav,
   .nav__toggler {
-    background: $mobile-submenu-fallback-bg-color;
-    background: $mobile-submenu-bg-color;
+    //background: $mobile-submenu-fallback-bg-color;
+    //background: $mobile-submenu-bg-color;
     list-style: none;
     margin: 0;
-    padding: 0 0 0.5em 0;
+    padding: 0;
 
     .nav__item {}
 
     .nav__link {
       color: $mobile-submenu-text-color;
-      padding-left: 1.5em;
+      padding-left: 2em;
 
       &:focus,
       &:hover,
@@ -128,7 +134,7 @@
     .nav__link {
       font-size: $font-size-normal;
       font-weight: normal;
-      padding-left: 2.5em;
+      padding-left: 3em;
     }
     .nav__link--view-all {
       font-weight: bold;
